--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div style="display: flex; flex-direction: row; box-sizing: border-box; position: relative; outline: none; flex: 1 1 0%;">
-        <div style="position: relative; width: 100%; min-height: 200px;" > Please Add your Own Text</div>
+        <div style="position: relative; width: 100%; min-height: 200px;" > Please Add your Own Text and the animation will be completed during the weekend</div>
         <div style="position: relative; width: 100%; min-height: 200px;">
         <div class="test-home" style="display: flex; flex-direction: column; box-sizing: border-box; position: relative; outline: none;">
             <div id="human-body-root" class=" css-m8os5t">
         <span id="human-body-svg-container">
-          <div id="title">Cases by Major Primary Site</div>
+          <div id="title">Cases BY ChnaduPraveen</div>
           <svg id="male" width="226px" height="500px" viewBox="0 0 226 917" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;">
             <g transform="matrix(1,0,0,1,-70.6928,-106.95)">
                 <g>
